<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <TextView
        android:id="@+id/text_titulo"
        style="@style/TextTittleLogin"
        android:textFontWeight="1200"
        android:text="@string/piggy"
        android:layout_marginTop="80sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_titulo2"
        style="@style/TextTittleLogin"
        android:textFontWeight="1200"
        android:text="@string/cash"
        android:layout_marginTop="-15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_titulo" />

    <TextView
        android:id="@+id/text_subtitulo"
        style="@style/TextLogin"
        android:text="@string/subtitulo"
        android:layout_marginTop="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_titulo2" />

    <EditText
        android:id="@+id/edit_email"
        android:hint="@string/email"
        style="@style/EditTextLogin"
        android:layout_marginTop="50sp"
        android:drawableLeft="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@id/text_subtitulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/edit_senha"
        android:hint="@string/senha"
        style="@style/EditTextLogin"
        android:drawableLeft="@drawable/ic_lock"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        android:background="@drawable/button_background"
        android:text="@string/login"
        style="@style/ButtonLogin"
        android:layout_marginTop="80sp"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/text_cadastro"
        style="@style/TextLogin"
        android:text="@string/cadastro"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_login" />

</androidx.constraintlayout.widget.ConstraintLayout>