<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    tools:context=".screen.SignInScreen">

    <TextView
        android:id="@+id/text_titulo"
        style="@style/TextTittleLogin"
        android:text="@string/cadastro"
        android:layout_marginTop="80sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_subtitulo"
        style="@style/TextLogin"
        android:text="@string/subtitulo"
        android:layout_marginTop="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_titulo" />

    <EditText
        android:id="@+id/edit_email"
        android:hint="@string/email"
        style="@style/EditTextLogin"
        android:layout_marginTop="50sp"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@id/text_subtitulo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/edit_senha"
        android:hint="@string/senha"
        style="@style/EditTextLogin"
        android:inputType="numberPassword"
        android:drawableLeft="@drawable/ic_lock"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/edit_nome"
        android:hint="@string/nome"
        style="@style/EditTextLogin"
        android:inputType="text"
        android:drawableLeft="@drawable/ic_email"
        app:layout_constraintTop_toBottomOf="@id/edit_senha"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_cadastrar"
        android:background="@drawable/button_background"
        android:text="@string/Cadastrar"
        style="@style/ButtonLogin"
        android:layout_marginTop="80sp"
        app:layout_constraintTop_toBottomOf="@id/edit_nome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:layout_height="40sp"
        android:layout_width="40sp"
        android:indeterminateTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/bt_cadastrar"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_img_view_sign"
        app:cardCornerRadius="120sp"
        android:layout_width="132sp"
        android:layout_height="132sp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:id="@+id/img_profile"
            android:src="@color/white"
            android:layout_gravity="center"
            android:layout_width="220sp"
            android:layout_height="220sp"/>
        <TextView
            android:id="@+id/text_overlay_sign_up"
            android:textSize="40sp"
            android:fontFamily="serif"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>